# graphics-framework

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  clean.bat  cs562_c.kwakman_presentation.pptx  demo.sh  graphics-framework.sln  graphics-framework.vcxproj  graphics-framework.vcxproj.filters  imgui.ini  vcpkg.json
data/: .gitattributes  .gitignore
data/blend_trees/: 2d_blend_node.blent  player_looking.blent
data/gltf/: ScreenTriangle.gltf
data/gltf/DamagedHelmet/: DamagedHelmet.gltf
data/gltf/buggy/: Buggy.gltf
data/gltf/mixamo_walking/: mixamo-walk-run.gltf  mixamo_walking.gltf
data/gltf/pirate_flintlock_pistol/: license.txt  scene.gltf
data/gltf/rigged_figure/: RiggedFigure.gltf  RiggedSimple.gltf
data/gltf/serapis/: serapis.gltf
data/gltf/skeleton_king/: skeleton_king.gltf  skeleton_king_original.gltf
data/gltf/skull/: skull.gltf
data/gltf/sponza/: README.md  Sponza.gltf
data/gltf/zombie_commoner/: scene.gltf  zombie_commoner.gltf
data/meshes/: .gitattributes  Cube.gltf  avocado.cs350
data/scenes/: cube_stack.scene  erin_catto_box_stacking.scene  friction_slopes_2.scene  gravity.scene  gravity_2.scene  scene.json  sceneAO.json  sceneCurves.json  sceneDecals.json  sceneShadow.json  sceneVerlet.json  sceneVolumetricFog.json
data/shaders/: bloom.frag  blur_ambient_occlusion.frag  default.vert  deferred.frag  deferred_decal.frag  dirlight_shadowmap.frag  display_framebuffer.vert  display_framebuffer_ambient_light.frag  display_framebuffer_ambient_occlusion.frag  display_framebuffer_clearcolor.frag  display_framebuffer_global_light.frag  display_framebuffer_plain.frag  infinite_grid.frag  infinite_grid.vert  phong.frag  postprocessing.frag  primitive.frag  skinned.vert  volfog_cs_density.comp  volfog_cs_inscattering.comp  volfog_cs_raymarching.comp  write_csm.frag  write_csm.vert
demo/: CMakeLists.txt  CMakeSettings.json  README.md  demo.sh
demo/data/blend_trees/: look_direction.blent  player_character.blent
demo/data/gltf/: Sphere.gltf
demo/data/gltf/MIXAMO/: xbot.gltf
demo/data/gltf/vokselia/: vokselia.gltf
demo/data/scenes/: cube_rigidbodies.scene  default.scene  destroy_stack.scene  domino_pyramid.scene  erin_catto_box_stacking.scene  friction_slope.scene  gravity.scene  gravity2.scene  physics_scene.scene  playground.scene  playground_destroy_wall.scene  playground_wall.scene  pointhull.scene  rigidbody.scene  rigidbody_collider.scene  sat_intersection.scene  scene.json  sceneAnimation.json  scenePoseBlending.json  sphere_on_ground.scene  test_edge_sat.scene  test_sat.scene  test_sat_faces.scene
demo/data/shaders/: blur_ambient_occlusion.frag  dirlight_shadowmap.vert  display_framebuffer_ao_monochrome.frag  display_framebuffer_global_light.frag  draw_collider_debug.frag  draw_collider_debug.vert  phong.frag  postprocessing.frag  volfog_cs_density.comp  write_csm.frag
demo/src/Demo/: LoadScene.cpp  LoadScene.h  graphics_pipeline.cpp  main.cpp  render_common.cpp  render_common.h  sandbox.cpp  sandbox.h
demo/src/Demo/Components/: Gravity.cpp  Gravity.hpp  PlayerController.cpp  PlayerController.h  SandboxCompManager.cpp  SandboxComponents.txt  VolumetricFog.cpp  VolumetricFog.h
demo/src/Demo/GraphicsPipeline/: lighting_pass.cpp  lighting_pass.h  volumetric_fog.cpp  volumetric_fog.h
engine/: CMakeLists.txt
engine/src/: impl_single_header_libs.cpp
engine/src/Engine/Components/: Camera.cpp  Camera.h  CurveFollower.cpp  CurveFollower.h  CurveInterpolator.cpp  CurveInterpolator.h  EngineCompManager.cpp  EngineComponents.txt  Light.cpp  Light.h  Nameable.cpp  Nameable.h  Renderable.cpp  Renderable.h  RigidBody.cpp  Rigidbody.h  SkeletonAnimator.cpp  SkeletonAnimator.h  Transform.cpp  Transform.h
engine/src/Engine/ECS/: component_manager.h  component_manager.inl  entity.cpp  entity.h
engine/src/Engine/Editor/: EditorCameraController.cpp  EditorCameraController.h  compile_imgui.cpp  editor.cpp  editor.h  my_imgui_config.h
engine/src/Engine/Graphics/: camera_data.cpp  camera_data.h  manager.cpp  manager.h  sdl_window.cpp  stb.cpp  tiny_gltf.cpp
engine/src/Engine/Graphics/misc/: create_convex_hull_mesh.cpp  create_convex_hull_mesh.h  load_obj_mesh.cpp  load_obj_mesh.hpp
engine/src/Engine/Managers/: input.cpp  resource_manager.cpp  resource_manager.h  resource_manager_data.cpp  resource_manager_data.h
engine/src/Engine/Math/: Transform3D.cpp  Transform3D.h  geometry.cpp  geometry.hpp  geometry_intersection.cpp  geometry_intersection.hpp  simplex.h
engine/src/Engine/Physics/: Collider.cpp  Collider.h  contact.h  convex_hull.cpp  convex_hull.h  convex_hull_loader.cpp  convex_hull_loader.h  half_edge.cpp  half_edge.h  inertia.cpp  inertia.hpp  integration.cpp  integration.h  intersection.cpp  intersection.h  physics_manager.cpp  physics_manager.hpp  point_hull.cpp  point_hull.h  resolution.cpp  resolution.hpp  rigidbody.cpp  rigidbody.h  rigidbody_data.cpp  rigidbody_data.hpp
engine/src/Engine/Serialisation/: common.cpp  common.h  compress.h  scene.cpp  scene.h  serialise_gltf.cpp  serialise_gltf.h
engine/src/Engine/Utils/: filesystem.h  load_obj_data.cpp  load_obj_data.hpp  logging.h  singleton.h
include/ImGui/: imconfig.h  imgui_impl_opengl3.h
include/ImGuizmo/: ImGuizmo.cpp
include/delaunator/: delaunator.cpp  delaunator.hpp
include/tiny_glft/: tiny_gltf.h
src/: main.cpp
src/Engine/Components/: Camera.cpp  Camera.h  CurveFollower.cpp  CurveInterpolator.cpp  CurveInterpolator.h  EngineCompManager.cpp  EngineCompManager.h  EngineComponents.txt  Light.cpp  Light.h  Nameable.cpp  Nameable.h  Renderable.cpp  Renderable.h  SkeletonAnimator.cpp  Transform.cpp  (+3 more)
src/Sandbox/: LoadScene.cpp  LoadScene.h  graphics_pipeline.cpp  graphics_pipeline.h  lighting_pass.cpp  lighting_pass.h  render_common.cpp  render_common.h  sandbox.cpp  sandbox.h
tests/: CMakeLists.txt  CMakeSettings.json
tests/src/: compress.cpp  convex_hull.cpp  integration.cpp  rigidbody.cpp  test_resource_manager.cpp  test_sat.cpp
working_dir/: imgui.ini
working_dir/data/: .gitignore
(+48 files in other folders)
